added 4-digit OTP

--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -24,7 +24,7 @@
         
         <!-- Added version indicator -->
         <div class="version-indicator">
-            API Version: v2
+            API Version: v3
         </div>
     </div>
 
@@ -40,8 +40,8 @@
                 formData.forEach((value, key) => jsonData[key] = value);
                 
                 try {
-                    // Updated to use v2 API
-                    const response = await fetch('/api/v2/forgot-password', {
+                    // Default to v3 API (4-digit PIN)
+                    const response = await fetch('/api/v3/forgot-password', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json'
