--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -16,8 +16,8 @@
         <!-- Vulnerability: Weak PIN requirements -->
         <form id="resetPasswordForm">
             <input type="text" name="username" placeholder="Username" required>
-            <!-- Vulnerability: Only 3-digit PIN -->
-            <input type="text" name="reset_pin" placeholder="3-Digit Reset PIN" required pattern="[0-9]{3}">
+            <!-- Vulnerability: Only 4-digit PIN -->
+            <input type="text" name="reset_pin" placeholder="4-Digit Reset PIN" required pattern="[0-9]{4}">
             <!-- Vulnerability: No password complexity requirements -->
             <input type="password" name="new_password" placeholder="New Password" required>
             <button type="submit">Reset Password</button>
@@ -28,7 +28,7 @@
         
         <!-- Added version indicator -->
         <div class="version-indicator">
-            API Version: v2
+            API Version: v3
         </div>
     </div>
 
@@ -44,8 +44,8 @@
                 formData.forEach((value, key) => jsonData[key] = value);
                 
                 try {
-                    // Updated to use v2 API
-                    const response = await fetch('/api/v2/reset-password', {
+                    // Default to v3 API (expects 4-digit PIN)
+                    const response = await fetch('/api/v3/reset-password', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json'
