--- a/templates/admin.html
+++ b/templates/admin.html
@@ -69,11 +69,11 @@
                 </div>
                 <div class="page-controls">
                     {% if page > 1 %}
-                        <a class="page-link" href="{{ url_for('admin_panel', page=page-1) }}">&larr; Previous</a>
+                        <a class="page-link" href="{{ url_for('admin_panel', page=page-1, loan_page=loan_page) }}">&larr; Previous</a>
                     {% endif %}
                     <span class="page-info">Page {{ page }} of {{ total_pages }}</span>
                     {% if page < total_pages %}
-                        <a class="page-link" href="{{ url_for('admin_panel', page=page+1) }}">Next &rarr;</a>
+                        <a class="page-link" href="{{ url_for('admin_panel', page=page+1, loan_page=loan_page) }}">Next &rarr;</a>
                     {% endif %}
                 </div>
             </div>
@@ -126,6 +126,27 @@
                     {% endfor %}
                 </tbody>
             </table>
+
+            <div class="pagination">
+                <div class="page-summary">
+                    {% if total_pending_loans > 0 %}
+                        {% set loan_start = ((loan_page - 1) * loan_per_page) + 1 %}
+                        {% set loan_end = [loan_page * loan_per_page, total_pending_loans] | min %}
+                        Showing {{ loan_start }}-{{ loan_end }} of {{ total_pending_loans }} pending loans
+                    {% else %}
+                        No pending loans found
+                    {% endif %}
+                </div>
+                <div class="page-controls">
+                    {% if loan_page > 1 %}
+                        <a class="page-link" href="{{ url_for('admin_panel', page=page, loan_page=loan_page-1) }}">&larr; Previous</a>
+                    {% endif %}
+                    <span class="page-info">Page {{ loan_page }} of {{ loan_total_pages }}</span>
+                    {% if loan_page < loan_total_pages %}
+                        <a class="page-link" href="{{ url_for('admin_panel', page=page, loan_page=loan_page+1) }}">Next &rarr;</a>
+                    {% endif %}
+                </div>
+            </div>
         </div>
         
         <a href="{{ url_for('dashboard') }}" class="button">Back to Dashboard</a>
