OpenRouter API key; toggle button placeholder

--- a/templates/index.html
+++ b/templates/index.html
@@ -786,6 +786,7 @@
                 <nav class="nav-links">
                     <!-- <a href="{{ url_for('login') }}">Sign In</a> -->
                     <!-- <a href="{{ url_for('register') }}">Sign Up</a> -->
+                    <a style="color: yellow; text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black, -1px 0 0 black, 1px 0 0 black, 0 -1px 0 black, 0 1px 0 black;">Toggle Vulnerabilities</a>
                     <a href="https://github.com/Commando-X/vuln-bank?tab=readme-ov-file#testing-guide-" target="_blank">Guide</a>
                     <a href="/api/docs"> API Docs</a>
                     <a href="https://github.com/Commando-X/vuln-bank" target="_blank" title="View on GitHub">
